--- a/harmony/harmony_templates/ObjectDistanceTable.html
+++ b/harmony/harmony_templates/ObjectDistanceTable.html
@@ -1,7 +1,7 @@
 <h1>{objectName} Distance Table</h1>
 <div class="container">
     <div class="row" align="right">
-        <input class="btn btn-info" type="button" value="Return to table" hx-target="#objectInteractor" hx-get='{observerURL}objects'">
+        <input class="btn btn-info" type="button" value="Return to table" hx-target="#objectInteractor" hx-get='{harmonyURL}objects_filter'">
     </div>
     <hr class="mt-2 mb-3">
     {objectDistanceCards}
