--- a/harmony/harmony_templates/TrackedObjectUpdater.html
+++ b/harmony/harmony_templates/TrackedObjectUpdater.html
@@ -1,16 +1,24 @@
 <h1>Updating {objectName}</h1>
 <div class="container border border-primary">
     <div class="row" align="right">
-        <input class="btn btn-info" type="button" value="Return to table" hx-target="#objectInteractor" hx-get='{observerURL}objects'">
+        <input class="btn btn-info" type="button" value="Return to table" hx-target="#objectInteractor" hx-get='{harmonyURL}objects'">
     </div>
     <div class="row">
-        <form hx-post="{observerURL}objects/{objectName}" hx-target="#objectInteractor">
+        <form hx-post="{harmonyURL}objects/{objectName}" hx-target="#objectInteractor">
             <label for="objectName">Name</label>
-            <input type="text" class="form-control" name="objectName" placeholder="{objectName}"><br>
+            <input type="text" class="form-control" name="objectName" value="{objectName}"><br>
+            <label for="objectType">Type</label>
+            <select name="objectType" id="objectType" hx-target="#objectSettings" hx-post='{harmonyURL}objects/{objectName}/type'>
+              <option value="None">None</option>
+              <option value="Terrain">Terrain</option>
+              <option value="Building">Building</option>
+              <option value="Unit">Unit</option>
+            </select><br>
+            <div id="objectSettings"></div>
             <input type="submit" class="btn btn-primary" value="Update">
         </form>
     </div>
     <div class="row" align="right">
-        <input class="btn btn-info" type="button" value="Delete Object" hx-target="#objectInteractor" hx-delete='{observerURL}objects/{objectName}'">
+        <input class="btn btn-info" type="button" value="Delete Object" hx-target="#objectInteractor" hx-delete='{harmonyURL}objects/{objectName}'">
     </div>
 </div>
