--- a/harmony/harmony_templates/ObjectActions.html
+++ b/harmony/harmony_templates/ObjectActions.html
@@ -1,8 +1,8 @@
-<h1>{objectName} Distance Table</h1>
+<h1>{objectName} Actions</h1>
 <div class="container">
     <div class="row" align="right">
         <input class="btn btn-info" type="button" value="Return to table" hx-target="#objectInteractor" hx-get='{harmonyURL}objects_filter'">
     </div>
     <hr class="mt-2 mb-3">
-    {objectDistanceCards}
+    {objectActionCards}
 </div>
