--- a/harmony/harmony_templates/TrackedObjectRow.html
+++ b/harmony/harmony_templates/TrackedObjectRow.html
@@ -12,7 +12,7 @@
             </div>
         </div>
         <div class="row">
-            <button class="btn btn-primary" hx-target="#objectInteractor" hx-get="{harmonyURL}object_distances/{objectName}">Object Distance Table</button>
+            <button class="btn btn-primary" hx-target="#objectInteractor" hx-get="{harmonyURL}object_actions/{objectName}">Object Actions</button>
             <button class="btn btn-info" hx-target="#objectInteractor" hx-get="{harmonyURL}objects/{objectName}">Edit</button>
         </div>
     </div>
