--- a/harmony/harmony_templates/TrackedObjectRow.html
+++ b/harmony/harmony_templates/TrackedObjectRow.html
@@ -12,8 +12,8 @@
             </div>
         </div>
         <div class="row">
-            <button class="btn btn-primary" hx-target="#objectInteractor" hx-get="{harmonyURL}object_actions/{objectName}">Object Actions</button>
-            <button class="btn btn-info" hx-target="#objectInteractor" hx-get="{harmonyURL}objects/{objectName}">Edit</button>
+            {actions}
+            {edit}
         </div>
     </div>
     <div class="col">
