--- a/harmony/harmony_templates/ObjectActions.html
+++ b/harmony/harmony_templates/ObjectActions.html
@@ -1,4 +1,7 @@
-<h1>{objectName} Actions</h1>
+<h1>{objectName} Actions
+<div class="container">
+    <img class="img-fluid border border-2 border-info" alt="{objectName} Icon" src="data:image/jpg;base64,{objectIcon}" style="border-radius: 10px;">
+</div></h1>
 <div class="container">
     <div class="row" align="right">
         <input class="btn btn-info" type="button" value="Return to table" hx-target="#objectInteractor" hx-get='{harmonyURL}objects_filter'">
