Integrate dma with web ui

--- a/harmony/harmony_templates/Harmony.html
+++ b/harmony/harmony_templates/Harmony.html
@@ -59,6 +59,12 @@
                     var img = document.querySelector("#liveCam")
                     img.src = `{harmonyURL}/camWithChanges/${camNum}`
                 }}
+                function gameGraph(){{
+                    var header = document.querySelector("#liveCamHeader")
+                    header.innerText = `Game Concept Graph`
+                    var img = document.querySelector("#liveCam")
+                    img.src = `{harmonyURL}gamegraph`
+                }}
                 </script>
                 {cameraButtons}
             </div>
