Move to importnb

--- a/harmony/harmony_templates/TrackedObjectRow.html
+++ b/harmony/harmony_templates/TrackedObjectRow.html
@@ -4,11 +4,19 @@
             <h5>{objectName}</h5>
         </div>
         <div class="row">
-            <p>Current Position: ({realCenter})</p>
+            <div class="col">
+                <p>Plating:<br>{armorPlating}</p>
+            </div>
+            <div class="col">
+                <p>Armor:<br>{armorStructural}</p>
+            </div>
         </div>
         <div class="row">
             <div class="col">
-                <p>Last Move Distance: {moveDistance}</p>
+                <p>Position:<br>({realCenter})</p>
+            </div>
+            <div class="col">
+                <p>Last Distance:<br>{moveDistance}</p>
             </div>
         </div>
         <div class="row">
