--- a/harmony/harmony_templates/TrackedObjectRow.html
+++ b/harmony/harmony_templates/TrackedObjectRow.html
@@ -1,4 +1,4 @@
-<div class="row mb-1 border border-secondary border-2">
+<div class="row mb-1 border {borderType}">
     <div class="col">
         <div class="row border border-info border-1">
             <h5>{objectName}</h5>
