--- a/harmony/harmony_templates/Harmony.html
+++ b/harmony/harmony_templates/Harmony.html
@@ -49,7 +49,7 @@
             </div>
             <div class="container justify-content-center">
                 <h3 id="liveCamHeader" class="mt-5">Live Cameras (Selected {defaultCamera})</h3>
-                <img id="liveCam" class="img-responsive border border-3 border-primary bg-primary" src="{harmonyURL}camWithChanges/{defaultCamera}" style="transform: rotate(-90deg); border-radius: 40px; max-width: 80%">
+                <img id="liveCam" class="img-responsive border border-3 border-primary bg-primary" src="{harmonyURL}camWithChanges/{defaultCamera}" style="border-radius: 40px; max-width: 80%; max-height: 500px">
             </div>
             <div class="container justify-content-center">
                 <script>
