--- a/harmony/harmony_templates/FilteredObjectsTable.html
+++ b/harmony/harmony_templates/FilteredObjectsTable.html
@@ -4,10 +4,9 @@
 </div>
 <div class="row ">
     <div id="factionFilter" class="btn-group" role="group" aria-labelbuildObjectActions="Objects Table Faction Filter Select Buttons">
-      <input type="radio" class="btn-check" name="factionFilterradio" id="AllFactions" autocomplete="off" {allFactionsSelected} hx-get="{harmonyURL}objects_filter?faction_filter=All" hx-target="#objectInteractor">
-      <label class="btn btn-outline-secondary" for="AllFactions">All Factions</label>
+      <input type="radio" class="btn-check" name="factionFilterradio" id="AllFactions" autocomplete="off"{allFactionsSelected} hx-get="{harmonyURL}objects_filter?faction_filter=All" hx-target="#objectInteractor">
+      <label class="btn btn-outline-primary" for="AllFactions">All Factions</label>
       {factionFilters}
-      <input type="button" class="btn btn-success" style="max-width:10%; margin-left: 10px" name="factionFilterradio" id="Add" value="+" autocomplete="off" hx-get="{harmonyURL}new_faction" hx-target="#objectInteractor">
     </div>
 </div>
 <div class="row ">
