Full faction input and display

--- a/harmony/harmony_templates/FilteredObjectsTable.html
+++ b/harmony/harmony_templates/FilteredObjectsTable.html
@@ -5,7 +5,7 @@
 <div class="row ">
     <div id="factionFilter" class="btn-group" role="group" aria-labelbuildObjectActions="Objects Table Faction Filter Select Buttons">
       <input type="radio" class="btn-check" name="factionFilterradio" id="AllFactions" autocomplete="off"{allFactionsSelected} hx-get="{harmonyURL}objects_filter?faction_filter=All" hx-target="#objectInteractor">
-      <label class="btn btn-outline-primary" for="AllFactions">All Factions</label>
+      <label class="btn btn-outline-secondary" for="AllFactions">All Factions</label>
       {factionFilters}
     </div>
 </div>
