--- a/harmony/harmony_templates/Harmony.html
+++ b/harmony/harmony_templates/Harmony.html
@@ -14,6 +14,31 @@
           border: 1px solid black;
           padding: 15px;
         }
+        
+        .x-box {
+            position: relative;
+            display: flex;
+        }
+
+        .x-box::before,
+        .x-box::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 10; /* Ensures it appears over text */
+            pointer-events: none; /* Allows interactions with underlying content */
+        }
+
+        .x-box::before {
+            background: linear-gradient(30deg, transparent 49%, red 49%, red 51%, transparent 51%);
+        }
+
+        .x-box::after {
+            background: linear-gradient(-30deg, transparent 49%, red 49%, red 51%, transparent 51%);
+        }
     </style>
     
     <title>Harmony</title>
@@ -38,7 +63,7 @@
             <div class="container" hx-get="{harmonyURL}get_mode_controller" hx-trigger="every 1.5s" id="modeController">
             </div>
             <div class="container">
-                <img class="img-fluid border border-info border-3" src="{harmonyURL}harmony_console" style="border-radius: 50px; border-width: 3">
+                <img class="img-fluid border border-info border-2" src="{harmonyURL}harmony_console" style="border-radius: 50px; border-width: 3">
             </div>
             <div class="container">
                 <div class="row">
@@ -48,11 +73,11 @@
                     <div class="col" hx-get="{harmonyURL}get_game_controller" hx-trigger="every 1.5s" id="gameController"></div>
                 </div>
             </div>
-            <div class="container justify-content-center">
+            <div class="container justify-content-center" align="center">
                 <h3 id="liveCamHeader" class="mt-5">Live Cameras (Selected {defaultCamera})</h3>
-                <img id="liveCam" class="img-responsive border border-3 border-primary bg-primary" src="{harmonyURL}camWithChanges/{defaultCamera}" style="border-radius: 40px; max-width: 80%; max-height: 500px">
+                <img id="liveCam" class="img-responsive border border-3 border-info bg-primary" src="{harmonyURL}camWithChanges/{defaultCamera}" style="border-radius: 40px; max-width: 80%; max-height: 500px">
             </div>
-            <div class="container justify-content-center">
+            <div class="container justify-content-center" align="center">
                 <script>
                 function liveCameraClick(camNum){{
                     var header = document.querySelector("#liveCamHeader")
