--- a/harmony/harmony_templates/TrackedObjectRow.html
+++ b/harmony/harmony_templates/TrackedObjectRow.html
@@ -21,6 +21,7 @@
         </div>
         <div class="row">
             {actions}
+            {movement}
             {edit}
         </div>
     </div>
