--- a/harmony/harmony_templates/TrackedObjectUpdater.html
+++ b/harmony/harmony_templates/TrackedObjectUpdater.html
@@ -1,7 +1,7 @@
 <h1>Updating {objectName}</h1>
 <div class="container border border-primary">
     <div class="row" align="right">
-        <input class="btn btn-info" type="button" value="Return to table" hx-target="#objectInteractor" hx-get='{harmonyURL}objects'">
+        <input class="btn btn-info" type="button" value="Return to table" hx-target="#objectInteractor" hx-get='{harmonyURL}objects_filter'">
         <input class="btn btn-secondary" type="button" value="Toggle Footprint" hx-target="#objectInteractor" hx-get='{harmonyURL}objects/{objectName}?footprint={footprintToggleState}'">
     </div>
     <div class="row">
