--- a/harmony/harmony_templates/Harmony.html
+++ b/harmony/harmony_templates/Harmony.html
@@ -49,7 +49,10 @@
     <div class="container">
         <div class="row">
             <div class="col" align="left">
-                <input class="btn btn-warning" type="button" value="Load Game" hx-get="{harmonyURL}load">
+                <form hx-post="{harmonyURL}load" hx-swap="none">
+                    <input class="btn btn-warning" type="submit" value="Load Game">
+                    <input class="text" value="Harmony" id="game_name" name="game_name">
+                </form>
             </div>
             <div class="col" align="right">
                 <input class="btn btn-info" type="button" value="Configurator" onclick="window.location.href='{configuratorURL}'">
@@ -102,7 +105,10 @@
     <hr>
     <div class="row" style="margin-top:5px">
         <div class="col" align="left">
-            <input class="btn btn-success" type="button" value="Save Game" hx-get="{harmonyURL}save">
+            <form hx-post="{harmonyURL}save" hx-swap="none">
+                <input class="btn btn-success" type="submit" value="Save Game">
+                <input class="text" value="Harmony" id="game_name" name="game_name">
+            </form>
         </div>
         <div class="col" align="right">
             <input class="btn btn-danger" type="button" value="Reset Game" hx-get="{harmonyURL}reset">
