--- a/harmony/harmony_templates/HarmonyObjectMovement.html
+++ b/harmony/harmony_templates/HarmonyObjectMovement.html
@@ -5,7 +5,7 @@
     </div>
     <div class="row">
         <div id="objectImageDiv">
-            <img class="img-fluid border border-info border-2" id="movementMap" alt="Object Movement Display" src="data:image/jpg;base64,{encodedBA}" onclick="movementImageClickListener(event)" style="border-radius: 10px;">
+            <img class="img-fluid border border-info border-2" id="movementMap" alt="Object Movement Display" src="data:image/jpg;base64,{encodedBA}" onclick="movementImageClickListener(event)" style="border-radius: 10px; width:100%; height:100%; object-fit:contain;">
         </div>
         <form hx-post="{harmonyURL}objects/{objectName}/request_movement" hx-target="#objectInteractor">
             <input hidden=true type="text" name="newLocation" id="newLocation" value="{newLocation}" hx-post="{harmonyURL}objects/{objectName}/movement" hx-target="#objectImageDiv">
