--- a/harmony/harmony_templates/ObjectActionCard.html
+++ b/harmony/harmony_templates/ObjectActionCard.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <img class="img-fluid border border-2 border-info" alt="Capture Image" src="data:image/jpg;base64,{targetVisual}" style="border-radius: 10px;">
+                    <img class="img-fluid border border-2 border-info" alt="Capture Image" src="data:image/jpg;base64,{targetVisual}" style="border-radius: 10px; width:100%; height:100%; object-fit:contain;">
                 </div>
                 <div class="col">
                     <h6>Attack</h6>
