--- a/harmony/harmony_templates/ObjectActions.html
+++ b/harmony/harmony_templates/ObjectActions.html
@@ -1,10 +1,10 @@
 <h1>{objectName} Actions
 <div class="container">
 <div class="col">
-    <img class="img-fluid border border-2 border-info" alt="{objectName} Icon" src="data:image/jpg;base64,{objectIcon}" style="border-radius: 10px;">
+    <img class="img-fluid border border-2 border-info" alt="{objectName} Icon" src="data:image/jpg;base64,{objectIcon}" style="border-radius: 10px; width:100%; height:100%; object-fit:contain;">
 <div>
 <div class="col">
-    <img class="img-fluid border border-2 border-info" alt="Visibility Map" src="data:image/jpg;base64,{visibilityMap}" style="border-radius: 10px;">
+    <img class="img-fluid border border-2 border-info" alt="Visibility Map" src="data:image/jpg;base64,{visibilityMap}" style="border-radius: 10px; width:100%; height:100%; object-fit:contain;">
 </div>
 </div></h1>
 <div class="container">
