--- a/harmony/harmony_templates/TrackedObjectActionRow.html
+++ b/harmony/harmony_templates/TrackedObjectActionRow.html
@@ -8,7 +8,7 @@
     <div class="col">
         <div class="container">
             <div class="row">
-                <img class="img-fluid border border-info border-2" alt="Object Visual" src="data:image/jpg;base64,{objectVisual}" style="border-radius: 10px;">
+                <img class="img-fluid border border-info border-2" alt="Object Visual" src="data:image/jpg;base64,{objectVisual}" style="border-radius: 10px; width:100%; height:100%; object-fit:contain;">
             </div>
             <div class="row">
                 {visibilityMap}
