--- a/harmony/harmony_templates/FilteredObjectsTable.html
+++ b/harmony/harmony_templates/FilteredObjectsTable.html
@@ -16,7 +16,7 @@
       <label class="btn btn-outline-primary" for="AllTypes">All Types</label>
       <input type="radio" class="btn-check" name="objectFilterradio" id="Terrain" autocomplete="off" {terrainSelected} hx-get="{harmonyURL}objects_filter?type_filter=Terrain" hx-target="#objectInteractor">
       <label class="btn btn-outline-primary" for="Terrain">Terrain</label>
-      <input type="radio" class="btn-check" name="objectFilterradio" id="Building" autocomplete="off" {buildingSelected} hx-get="{harmonyURL}objects_filter?type_filter=Building" hx-target="#objectInteractor">
+      <input type="radio" class="btn-check" name="objectFilterradio" id="Structure" autocomplete="off" {buildingSelected} hx-get="{harmonyURL}objects_filter?type_filter=Structure" hx-target="#objectInteractor">
       <label class="btn btn-outline-primary" for="Building">Building</label>
       <input type="radio" class="btn-check" name="objectFilterradio" id="Unit" autocomplete="off" {unitSelected} hx-get="{harmonyURL}objects_filter?type_filter=Unit" hx-target="#objectInteractor">
       <label class="btn btn-outline-primary" for="Unit">Unit</label>
