Refactor hex observer into harmony

--- a/harmony/bm_templates/TrackedObjectRow.html
+++ b/harmony/bm_templates/TrackedObjectRow.html
@@ -5,6 +5,14 @@
         </div>
         <div class="row">
             <div class="col">
+                <p>Plating:<br>{armorPlating}</p>
+            </div>
+            <div class="col">
+                <p>Armor:<br>{armorStructural}</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
                 <p>Position:<br>({realCenter})</p>
             </div>
             <div class="col">
