--- a/harmony/bm_templates/TrackedObjectUpdater.html
+++ b/harmony/bm_templates/TrackedObjectUpdater.html
@@ -14,6 +14,9 @@
             <input type="submit" class="btn btn-primary" value="Update">
         </form>
     </div>
+    <div class="row" align="right">
+        <input class="btn btn-secondary" type="button" value="Alter Footprint" hx-target="#objectInteractor" hx-get='{harmonyURL}objects/{objectName}/footprint_editor'">
+    </div>
     <div class="row"></div>
     <div class="row" align="right">
         <input class="btn btn-info" type="button" value="Delete Object" hx-target="#objectInteractor" hx-delete='{harmonyURL}objects/{objectName}'">
